Runs and kills tcpdump correctly now, by way of shell scripting.